--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "lint": "biome lint . && biome format . && prettier --check .",
     "format": "biome format --write . && prettier --write .",
-    "build": "tsup src/index.ts --format=esm,cjs --dts --minify",
-    "build-fast": "tsup src/index.ts --format=esm,cjs --no-dts --minify",
+    "build": "turbo run build:full",
+    "build:full": "tsup src/index.ts --format=esm,cjs --dts --minify",
+    "build:fast": "tsup src/index.ts --format=esm,cjs --no-dts --minify",
     "dev": "pnpm build-fast --watch",
     "prepack": "pnpm build",
     "test": "vitest"
@@ -35,8 +36,8 @@
     "@vitest/coverage-v8": "^1.3.1",
     "prettier": "^3.2.5",
     "tsup": "^8.0.2",
+    "turbo": "^1.12.5",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
-  },
-  "dependencies": {}
+  }
 }
