--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,13 @@
 {
+  "extends": ["@domin-mnd/config/ts"],
   "compilerOptions": {
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "downlevelIteration": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "noEmit": true,
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "noImplicitReturns": false,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "verbatimModuleSyntax": true,
     "tsBuildInfoFile": "node_modules/.cache/.tsbuildinfo",
     "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "tests"],
-  "exclude": ["./*.d.ts", "node_modules"]
+  "include": ["src", "tests"]
 }
