--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "biome lint . && biome format . && prettier --check .",
     "format": "biome format --write . && prettier --write .",
     "build": "turbo run build:full",
-    "build:full": "tsup src/index.ts --format=esm,cjs --dts --minify",
-    "build:fast": "tsup src/index.ts --format=esm,cjs --no-dts --minify",
-    "dev": "pnpm build-fast --watch",
-    "prepack": "pnpm build",
+    "build:full": "tsup --dts --clean",
+    "dev": "tsup --no-dts --watch",
+    "prepack": "turbo run build:full",
     "test": "vitest"
   },
   "repository": {
@@ -30,14 +29,14 @@
   },
   "homepage": "https://github.com/domin-mnd/[package]#readme",
   "devDependencies": {
-    "@biomejs/biome": "^1.5.3",
+    "@biomejs/biome": "^1.6.2",
     "@domin-mnd/config": "^0.0.3",
-    "@types/node": "^20.11.20",
-    "@vitest/coverage-v8": "^1.3.1",
+    "@types/node": "^20",
+    "@vitest/coverage-v8": "^1.4.0",
     "prettier": "^3.2.5",
     "tsup": "^8.0.2",
-    "turbo": "^1.12.5",
-    "typescript": "^5.3.3",
-    "vitest": "^1.3.1"
+    "turbo": "^1.13.0",
+    "typescript": "^5.4.3",
+    "vitest": "^1.4.0"
   }
 }
