--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,8 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build:full": {
-      "outputs": ["dist/**"]
+      "outputs": ["dist/**"],
+      "outputMode": "errors-only"
     }
   }
 }
